[gd_scene load_steps=14 format=3 uid="uid://cs3cj7utcstit"]

[ext_resource type="Script" path="res://menus/scripts/select_scene_scene.gd" id="1_g06dk"]
[ext_resource type="Texture2D" uid="uid://cxaxu1yys3w5p" path="res://Assets/Img_background_dialogue/bg_sunrise.png" id="2_lak2h"]
[ext_resource type="Texture2D" uid="uid://cf8kr4x6o0avp" path="res://Assets/main menu scenes 1.png" id="3_b7wk0"]
[ext_resource type="Texture2D" uid="uid://cs7ul7e1humol" path="res://Assets/main menu scene 3.png" id="4_lg833"]
[ext_resource type="Texture2D" uid="uid://c1up7y8lx0fre" path="res://Assets/image main menu scene 2.png" id="5_jig2f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hjhf1"]
texture = ExtResource("2_lak2h")
modulate_color = Color(0.568973, 0.568973, 0.568973, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nm3tk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqknk"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0768358, 0.0768358, 0.0768358, 0.470588)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vnij"]
bg_color = Color(0.28485, 0.28485, 0.28485, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0768358, 0.0768358, 0.0768358, 0.470588)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mm5h"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0768358, 0.0768358, 0.0768358, 0.470588)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xy6ma"]
texture = ExtResource("3_b7wk0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_625od"]
texture = ExtResource("4_lg833")
modulate_color = Color(0.568973, 0.568973, 0.568973, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6pyy6"]
texture = ExtResource("5_jig2f")
modulate_color = Color(0.568973, 0.568973, 0.568973, 1)

[node name="Select_scene_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g06dk")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hjhf1")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.5
offset_top = 91.0
offset_right = 256.5
offset_bottom = 168.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 56
text = "Select Scenes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -284.0
offset_bottom = -235.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="Button_level_1" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_nm3tk")
theme_override_styles/hover = SubResource("StyleBoxFlat_pqknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2vnij")
theme_override_styles/normal = SubResource("StyleBoxFlat_4mm5h")
text = "Level City"

[node name="Button_level_2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_nm3tk")
theme_override_styles/hover = SubResource("StyleBoxFlat_pqknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2vnij")
theme_override_styles/normal = SubResource("StyleBoxFlat_4mm5h")
text = "Level Forest"

[node name="Button_level_3" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_nm3tk")
theme_override_styles/hover = SubResource("StyleBoxFlat_pqknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2vnij")
theme_override_styles/normal = SubResource("StyleBoxFlat_4mm5h")
text = "Level Boss Fight"

[node name="Button_level_4" type="Button" parent="."]
layout_mode = 2
offset_left = 396.0
offset_top = 498.0
offset_right = 645.0
offset_bottom = 547.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_nm3tk")
theme_override_styles/hover = SubResource("StyleBoxFlat_pqknk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2vnij")
theme_override_styles/normal = SubResource("StyleBoxFlat_4mm5h")
text = "Back"

[node name="Background2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 175.0
offset_top = 171.0
offset_right = -681.0
offset_bottom = -286.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xy6ma")

[node name="Background3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 628.0
offset_top = 171.0
offset_right = -228.0
offset_bottom = -286.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_625od")

[node name="Background4" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 384.0
offset_top = 171.0
offset_right = -472.0
offset_bottom = -286.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6pyy6")

[connection signal="pressed" from="HBoxContainer/Button_level_1" to="." method="_on_button_level_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_level_2" to="." method="_on_button_level_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_level_3" to="." method="_on_button_level_3_pressed"]
[connection signal="pressed" from="Button_level_4" to="." method="_on_button_level_4_pressed"]
